--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -57,7 +57,7 @@ body {
 .card-body {
   position: relative;
 }
-
+/*hover effect*/
 .card-body:hover {
   box-shadow: inset 0px 0px 20px #333, 0 0 40px #333;
   -webkit-filter: brightness(120%);
