--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -46,10 +46,8 @@ body {
   background-color: black;
   border: white 1px solid;
 }
-#githubLink:hover {
-  background-color: #98fb98;
-  color: #000;
-  border: black 1px solid;
+#hover {
+  color: magenta;
 }
 .navbar-nav {
   margin-top: 0;
