--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -46,9 +46,7 @@ body {
   background-color: black;
   border: white 1px solid;
 }
-#hover {
-  color: magenta;
-}
+
 .navbar-nav {
   margin-top: 0;
 }
@@ -63,6 +61,7 @@ body {
   transition-duration: 0.5s;
   background-color: #cc4499;
 }
-#hover {
-  color: #663dff;
+#linkedin:hover,
+#github:hover {
+  color: #98fb98;
 }
