--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -59,7 +59,7 @@ body {
   -webkit-filter: brightness(120%);
   filter: brightness(120%);
   transition-duration: 0.5s;
-  background-color: #cc4499;
+  background-color: darkslategrey;
 }
 #linkedin:hover,
 #github:hover {
