--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -58,7 +58,8 @@ body {
   box-shadow: inset 0px 0px 20px #333, 0 0 40px #333;
   transition: 0.5s;
   transition-duration: 0.5s;
-  background-color: #008080;
+  background-color: #0abab5;
+  background-image: none;
 }
 #linkedin:hover,
 #github:hover {
