change .card-body:hover { background-color: #cc4499;} in style css file

--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -58,7 +58,7 @@ body {
   box-shadow: inset 0px 0px 20px #333, 0 0 40px #333;
   transition: 0.5s;
   transition-duration: 0.5s;
-  background-color: #0abab5;
+  background-color: #cc4499;
   background-image: none;
 }
 #linkedin:hover,
