change bg color for #githubLink:hover to 44cc77 in style css

--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -47,7 +47,7 @@ body {
   border: white 1px solid;
 }
 #githubLink:hover {
-  background-color: green;
+  background-color: #44cc77;
   border: white 1px solid;
 }
 
