change text color and border in #githubLink:hover in style css file

--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -48,7 +48,8 @@ body {
 }
 #githubLink:hover {
   background-color: #44cc77;
-  border: white 1px solid;
+  border: black 1px solid;
+  color: black;
 }
 
 .navbar-nav {
