--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;800&display=swap");
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css");
 /* header */
 .header {
   background-color: #663dff;
@@ -85,32 +86,9 @@ body {
   }
   /* Navbar */
   .navbar-nav {
-    margin: 0;
+    margin: 0 auto;
     display: flex;
-    justify-content: flex-end;
-  }
-  .nav-item {
-    padding: 0 20px;
-  }
-}
-
-/* Add media queries for responsive styles */
-
-/* Styles for larger screens */
-@media (min-width: 768px) {
-  /* Header */
-  .header {
-    height: 300px;
-  }
-  .header h1 {
-    padding-top: 100px;
-    font-size: 4rem;
-  }
-  /* Navbar */
-  .navbar-nav {
-    margin: 0;
-    display: flex;
-    justify-content: flex-end;
+    justify-content: center;
   }
   .nav-item {
     padding: 0 20px;
@@ -129,9 +107,8 @@ body {
   }
   /* Navbar */
   .navbar-nav {
-    margin: 0;
-    flex-direction: column;
-    align-items: center;
+    margin: 0 auto;
+    text-align: center; /* Center align for smaller screens */
     background-color: #663dff;
   }
   .nav-item {
