--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -17,7 +17,6 @@
   margin: 0;
   padding-top: 75px;
   text-align: center;
-
   color: white;
   font-size: 3rem;
 }
@@ -100,6 +99,9 @@ body {
   .nav-item {
     padding: 0 20px;
   }
+}
+.navbar {
+  background-color: none;
 }
 
 /* Styles for smaller screens (mobile) */
