change color styles in navbar

--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -37,7 +37,7 @@ body {
 .nav-link {
   text-decoration: underline;
   text-shadow: 2px 2px white;
-  color: blacknpm;
+  color: black;
 }
 
 .nav-link:hover {
