--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -91,18 +91,15 @@ body {
     padding-top: 100px;
     font-size: 4rem;
   }
+
   /* Navbar */
   .navbar-nav {
     margin: 0 auto;
-    display: flex;
-    justify-content: center;
+    text-align: center; /* Center align for smaller screens */
   }
   .nav-item {
-    padding: 0 20px;
+    padding: 10px 0;
   }
-}
-.navbar {
-  background-color: none;
 }
 
 /* Styles for smaller screens (mobile) */
