add margin top 20px to menu on mobile small screem

--- a/src/styles/Style.css
+++ b/src/styles/Style.css
@@ -34,6 +34,9 @@
   color: black;
 }
 
+.navbar-toggler {
+  margin-top: 20px;
+}
 .nav-link:hover {
   color: magenta;
   text-shadow: 2px 2px black;
